[gd_scene load_steps=10 format=3 uid="uid://2413ue8fbi7x"]

[ext_resource type="Script" path="res://Scripts/PlayableCharacters/player_wisp.gd" id="1_hy1py"]
[ext_resource type="Texture2D" uid="uid://b6d8g183x604k" path="res://Assets/PlayerSprites/WispPC.png" id="2_7l2m0"]
[ext_resource type="Texture2D" uid="uid://b765rq8em4da0" path="res://Assets/PlayerSprites/WispPodium.png" id="2_mw1g2"]
[ext_resource type="Texture2D" uid="uid://dpke0f8s5sjkw" path="res://Assets/Enemy/JetpackAnim/Shadow.png" id="4_klm5t"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ydh3u"]
radius = 14.0
height = 42.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kopfh"]
size = Vector2(16, 44)

[sub_resource type="Animation" id="Animation_vjh77"]
resource_name = "bobbing"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("shadow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.2, 0.977778), Vector2(0.888888, 0.577778)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("playerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 4.44444)]
}

[sub_resource type="Animation" id="Animation_85dld"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("shadow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.8, 0.8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("playerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ri4yj"]
_data = {
"RESET": SubResource("Animation_85dld"),
"bobbing": SubResource("Animation_vjh77")
}

[node name="player_wisp" type="CharacterBody2D" groups=["Player"]]
texture_filter = 1
scale = Vector2(0.9, 0.9)
script = ExtResource("1_hy1py")
speed = 80.0
attackDamage = 5.0
specialDamage = 2.0
health = 10.0
possessionTexture = ExtResource("2_mw1g2")
sceneKey = "Wisp"

[node name="playerSprite" type="Sprite2D" parent="."]
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_7l2m0")

[node name="hurtbox" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ydh3u")

[node name="InteractableBox" type="Area2D" parent="."]

[node name="interact_box_right" type="CollisionShape2D" parent="InteractableBox"]
position = Vector2(14, 0)
shape = SubResource("RectangleShape2D_kopfh")

[node name="interact_box_left" type="CollisionShape2D" parent="InteractableBox"]
position = Vector2(-14, 0)
shape = SubResource("RectangleShape2D_kopfh")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="attackMarker" type="Marker2D" parent="."]
visible = false

[node name="shadow" type="Sprite2D" parent="."]
position = Vector2(0, 30)
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_klm5t")
offset = Vector2(0, -25)

[node name="bobAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ri4yj")
}
autoplay = "bobbing"

[connection signal="body_entered" from="InteractableBox" to="." method="_on_interactable_box_body_entered"]
[connection signal="body_exited" from="InteractableBox" to="." method="_on_interactable_box_body_exited"]
